check bandwidth for multithreaded copying

--- a/measure_flops/Makefile
+++ b/measure_flops/Makefile
@@ -1,3 +1,4 @@
 all:
-	g++ -O2 --std=c++11 memmv.cc -o memmv
+	g++ -O2 thread_memmv.cc -o thread_memmv -pthread -std=c++11
+	g++ -O2 memmv.cc -o memmv -std=c++11
 
